added virtual printer to test
